--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,6 @@ nav ul>li {
   }
 }
 
-.react-multiple-carousel__arrow {
-  opacity: .1;
-}
-
-.react-multiple-carousel__arrow:hover {
-  opacity: 1;
-}
-
 .simple-card:hover .pro-container {
   animation: flips ease 1s;
   background-color: #f3eedc;
@@ -167,4 +159,23 @@ nav a.active::after {
   border: 0.899422px solid #FFFFFF;
   filter: drop-shadow(0px 2.39846px 2.39846px rgba(0, 0, 0, 0.25));
   border-radius: 60.5611px 141.809px 71.9538px 119.923px;
+}
+
+
+#projects .react-multi-carousel-item.react-multi-carousel-item--active {
+  scale: 1.1;
+  z-index: 1000;
+}
+
+#projects .react-multi-carousel-item:not(.react-multi-carousel-item--active) {
+  filter: blur(2px); /* You can adjust the blur value */
+  opacity: 0.6; /* Optionally, reduce opacity for non-active items */
+  scale: .8;
+}
+
+.react-multiple-carousel__arrow {
+  opacity: .5;
+}
+.react-multiple-carousel__arrow:hover {
+  opacity: .8;
 }
